--- a/src/Inamika/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/Inamika/FrontendBundle/Resources/views/Default/index.html.twig
@@ -215,7 +215,7 @@ pueda ofrecer a sus clientes herramientas de alta calidad.</p>
             <p class="cta-text"> Podés realizar tu pedido desde nuestra plataforma web o desde nuestra App Mobile</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="{{ path('inamika_frontend_shop') }}">App mobile</a>
+            <a class="cta-btn align-middle" href="{{ asset('Nortcuyo.apk') }}">App mobile</a>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="{{ path('inamika_frontend_shop') }}">Shop</a>
