hotfix productos con descripcion

--- a/src/Inamika/FrontendBundle/Resources/views/Shop/cart.html.twig
+++ b/src/Inamika/FrontendBundle/Resources/views/Shop/cart.html.twig
@@ -80,7 +80,7 @@
                 barcode: "{{ item.product.barcode }}",
                 brand: "{{ item.product.brand }}",
                 code: "{{ item.product.code }}",
-                description: "{{ item.product.description }}",
+                description: `{{ item.product.description }}`,
                 id: "{{ item.product.id }}",
                 name: "{{ item.product.name }}",
                 picture: "{{ item.product.picture }}",
