--- a/src/Inamika/BackOfficeBundle/Resources/views/Products/index.html.twig
+++ b/src/Inamika/BackOfficeBundle/Resources/views/Products/index.html.twig
@@ -8,8 +8,9 @@
         {{ (app.request.attributes.get('_route_params')['_breadcrumbs']|last)['label'] | trans }}
     {% endif %}
     <div class="btn-group pull-right">
-        <button type="button" class="btn btn-info btn-rounded " onclick="location.href='{{ path('inamika_backoffice_prices_add')}}'"><i class="fa fa-upload"></i> {{ 'Subir lista' | trans }}</button>
         <button type="button" class="btn btn-success btn-rounded " onclick="location.href='{{ path(pathBase~'_add')}}'"><i class="fa fa-plus"></i> {{ 'ADD' | trans }}</button>
+        <button type="button" class="btn btn-info btn-rounded " onclick="location.href='{{ path('inamika_backoffice_prices_add')}}'"><i class="fa fa-upload"></i> {{ 'Subir lista' | trans }}</button>
+        <button type="button" class="btn btn-warning btn-rounded " onclick="location.href='{{ path('api_prices_download')}}'"><i class="fa fa-download"></i> {{ 'Descargar lista' | trans }}</button>
         </div>
     </h3>
 <div class="table-responsive">
