--- a/src/Inamika/FrontendBundle/Resources/views/Shop/offers.html.twig
+++ b/src/Inamika/FrontendBundle/Resources/views/Shop/offers.html.twig
@@ -1,4 +1,4 @@
-{% if data.code == 200 %}
+{% if data.code == 200 and data.result.data | length > 0 %}
         <div class="row">
             <div class="col-sm-9">
                 <h3>Ofertas</h3>
