--- a/src/Inamika/FrontendBundle/Resources/views/_partials/selectCategory.html.twig
+++ b/src/Inamika/FrontendBundle/Resources/views/_partials/selectCategory.html.twig
@@ -9,3 +9,11 @@
         <button class="btn btn-primary btn-block" type="button" data-toggle="modal" data-target="#categoryModal">Seleccionar</button>
     </div>
 </div>
+<br>
+<div class="card">
+    <div class="card-body">
+        <h5 class="card-title">Lista de precios</h5>
+        <hr>
+        <a role="button" class="btn btn-primary btn-block" href="{{ path('api_prices_download')}}"><i class="fa fa-download"></i> Descargar</a>
+    </div>
+</div>
