--- a/src/Inamika/FrontendBundle/Resources/views/_partials/viewProduct.html.twig
+++ b/src/Inamika/FrontendBundle/Resources/views/_partials/viewProduct.html.twig
@@ -45,7 +45,7 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<h3 class="price-text-color" style="margin-bottom: 10px;">
-					${{ (product.price * app.session.get('_security_main').category.discount) | number_format(2, ',', '.') }}</h3>
+					{{ product.currency.symbol }} {{ (product.price * app.session.get('_security_main').category.discount) | number_format(2, ',', '.') }}</h3>
 			</div>
 			<div class="col-sm-6">
 				<div class="input-group">
@@ -70,13 +70,13 @@
 		</button>
 		<div class="descriptionPage">
 			<hr>
-			<p>{{ product.description }}</p>
+			<p>{{ product.description | nl2br | raw}}</p>
 		</div>
 	</div>
 </div>
 <div class="descriptionModal">
 	<hr>
-	<p>{{ product.description }}</p>
+	<p>{{ product.description | nl2br | raw}}</p>
 </div>
 
 <script src="{{ asset('bundles/inamikafrontend/') }}js/custom.js"></script>
