--- a/src/Inamika/FrontendBundle/Resources/views/_partials/cardProduct.html.twig
+++ b/src/Inamika/FrontendBundle/Resources/views/_partials/cardProduct.html.twig
@@ -10,12 +10,12 @@
         <div class="price" onclick="quickViewProduct('{{ product.code }}')">
             <h6 style="height: 40px;">{{ product.name | capitalize }}</h6>
             <div class="row">
-            <div class="col-sm-6">
-            <h5 class="price-text-color" style="margin-bottom: 10px;"> ${{ (product.price * app.session.get('_security_main').category.discount ) | number_format(2, ',', '.') }}</h5>
-            </div>
-            <div class="col-sm-6 text-right">
-            <small class="text-muted" >{{ product.code }}</small>
-            </div>
+                <div class="col-sm-7">
+                    <h5 class="price-text-color" style="margin-bottom: 10px;"> {{ product.currency.symbol }} {{ (product.price * app.session.get('_security_main').category.discount ) | number_format(2, ',', '.') }}</h5>
+                </div>
+                <div class="col-sm-5 text-right">
+                    <small class="text-muted" >{{ product.code }}</small>
+                </div>
             </div>
         </div>
         <div class="separator clear-left">
