--- a/src/Inamika/BackOfficeBundle/Resources/views/Orders/view.html.twig
+++ b/src/Inamika/BackOfficeBundle/Resources/views/Orders/view.html.twig
@@ -95,7 +95,7 @@
 					<tbody>
 						{% for item in data.items %}
 							<tr>
-								<td class="text-center">{{ (loop.index + 1) }}</td>
+								<td class="text-center">{{ (loop.index ) }}</td>
 								<td>{{ item.code }}</td>
 								<td>{{ item.description }}</td>
 								<td class="text-right">{{ item.amount }}</td>
