--- a/src/Inamika/BackOfficeBundle/Resources/views/Salients/form.html.twig
+++ b/src/Inamika/BackOfficeBundle/Resources/views/Salients/form.html.twig
@@ -88,7 +88,7 @@
 					<td>${picture}</td>
 					<td class="align-middle">${products[i].code}</td>
 					<td class="align-middle">${products[i].name}</td>
-					<td class="align-middle"><b>$ ${new Intl.NumberFormat("de-DE").format(parseFloat(products[i].price))}</b></td>
+					<td class="align-middle"><b>${products[i].currency.symbol} ${new Intl.NumberFormat("de-DE").format(parseFloat(products[i].price))}</b></td>
 					<td class="align-middle"><button type="button" class="btn-remove btn btn-outline-danger btn-circle" onclick="removeProduct('${products[i].id}')"><i class="fa fa-remove"></i></button></td>
 				</tr>`);
 			}
@@ -101,6 +101,7 @@
 					"id": '{{ item.product.id }}',
 					"code": '{{ item.product.code }}',
 					"name": '{{ item.product.name }}',
+					"currency": {'symbol':'{{ item.product.currency.symbol }}'},
 					"picture": '{{ item.product.picture }}',
 					"price": '{{ item.product.price }}',
 				}
@@ -157,7 +158,7 @@
 						title:"Precio lista",
 						className: "text-right",
 						render: function (data, type, JsonResultRow, meta) {
-							return `<b>$ ${new Intl.NumberFormat("de-DE").format(parseFloat(JsonResultRow.price))}</b>`;
+							return `<b>${JsonResultRow.currency.symbol} ${new Intl.NumberFormat("de-DE").format(parseFloat(JsonResultRow.price))}</b>`;
 						}
 					},
 				]
