--- a/src/Inamika/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/Inamika/FrontendBundle/Resources/views/Default/index.html.twig
@@ -253,13 +253,13 @@ pueda ofrecer a sus clientes herramientas de alta calidad.</p>
           <div class="col-sm-8">
           <ul>
             <li>
-              Servicios especiales a ferreterías
+              <h6>Servicios especiales a ferreterías</h6>
             </li>
             <li>
-              Seguridad, respaldo y stock permanente de productos
+              <h6>Seguridad, respaldo y stock permanente de productos</h6>
             </li>
             <li>
-              Otorgamos las mejores posibilidades de pago
+              <h6>Otorgamos las mejores posibilidades de pago</h6>
             </li>
           </ul>
         </div>
@@ -270,12 +270,12 @@ pueda ofrecer a sus clientes herramientas de alta calidad.</p>
       <div class="container">
         <ul>
           <li>
-            <h4>Solicite asesoramiento a nuestros e-mail: </h4>
-            <h4><a style="color:#FFF;" href="mailto:mkt@ntsamayoristas.com.ar">mkt@ntsamayoristas.com.ar</a> / <a style="color:#FFF;" href="mailto:mkt1@ntsamayoristas.com.ar">mkt1@ntsamayoristas.com.ar</a></h4>
+            <h6>Solicite asesoramiento a nuestros e-mail: </h6>
+            <h6><a style="color:#FFF;" href="mailto:mkt@ntsamayoristas.com.ar">mkt@ntsamayoristas.com.ar</a> / <a style="color:#FFF;" href="mailto:mkt1@ntsamayoristas.com.ar">mkt1@ntsamayoristas.com.ar</a></h6>
           </li>
           <li>
-            <h4>Para realizar su pedido, escríbanos a: </h4>
-            <h4><a style="color:#FFF;" href="mailto:ventas@ntsamayoristas.com.ar">ventas@ntsamayoristas.com.ar</a> / <a style="color:#FFF;" href="mailto:administracion@ntsamayoristas.com.ar">administracion@ntsamayoristas.com.ar</a></h4>
+            <h6>Para realizar su pedido, escríbanos a: </h6>
+            <h6><a style="color:#FFF;" href="mailto:ventas@ntsamayoristas.com.ar">ventas@ntsamayoristas.com.ar</a> / <a style="color:#FFF;" href="mailto:administracion@ntsamayoristas.com.ar">administracion@ntsamayoristas.com.ar</a></h6>
           </li>
         </ul>
       </div>
