--- a/src/Inamika/FrontendBundle/Resources/public/css/style.css
+++ b/src/Inamika/FrontendBundle/Resources/public/css/style.css
@@ -40,7 +40,6 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Poppins", sans-serif;
     font-weight: 400;
     margin: 0 0 20px 0;
     padding: 0;
@@ -121,7 +120,6 @@ h6 {
     margin: 0;
     padding: 6px 0;
     line-height: 1;
-    font-family: "Poppins", sans-serif;
     font-weight: 700;
     letter-spacing: 3px;
     text-transform: uppercase;
@@ -209,7 +207,6 @@ h6 {
 }
 
 #hero .btn-get-started {
-    font-family: "Poppins", sans-serif;
     text-transform: uppercase;
     font-weight: 500;
     font-size: 16px;
@@ -316,7 +313,6 @@ h6 {
     text-decoration: none;
     display: inline-block;
     color: #373739;
-    font-family: "Poppins", sans-serif;
     font-weight: 400;
     text-transform: uppercase;
     font-size: 13px;
@@ -599,7 +595,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 #facts {
-    background: #f7f7f7;
+    /* background: #f7f7f7; */
     padding: 80px 0 60px 0;
 }
 
@@ -612,7 +608,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 #facts .counters p {
     padding: 0;
     margin: 0 0 20px 0;
-    font-family: "Poppins", sans-serif;
     font-size: 14px;
 }
 
@@ -621,7 +616,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 #catalog {
-    background: #f7f7f7;
+    /* background: #f7f7f7; */
     padding: 80px 0 60px 0;
 }
 
@@ -634,7 +629,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 #catalog .counters p {
     padding: 0;
     margin: 0 0 20px 0;
-    font-family: "Poppins", sans-serif;
     font-size: 14px;
 }
 
@@ -805,7 +799,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #call-to-action .cta-btn {
-    font-family: "Poppins", sans-serif;
     text-transform: uppercase;
     font-weight: 500;
     font-size: 16px;
@@ -977,7 +970,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 #contact {
-    background: #f7f7f7;
+    /* background: #f7f7f7; */
     padding: 80px 0 40px 0;
 }
 
@@ -1111,7 +1104,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .background-gray {
-    background-color: #f7f7f7;
+    /* background-color: #f7f7f7; */
     padding: 20px 0px;
 }
 
@@ -1304,7 +1297,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .carousel-item {
-    height: 400px;
+    height: 452px;
 }
 
 .modalViewProduct .carousel-item {
@@ -1406,7 +1399,7 @@ div.badge-cart {
     color: #333;
     padding: 5%;
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .box-inmundo li {
@@ -1460,5 +1453,9 @@ div.badge-cart {
         color: #FFF !important;
         font-size: 1em;
         line-height: 1em;
+    }
+    h2,
+    h3 {
+        font-size: 1.5rem !important;
     }
 }
