--- a/src/Inamika/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/Inamika/FrontendBundle/Resources/views/Default/index.html.twig
@@ -12,21 +12,15 @@
     <!--==========================
       About Us Section
     ============================-->
-    <section id="about" style="padding-bottom: 0px;">
+    <section id="about">
       <div class="container">
         <div class="row about-container">
           <div class="col-lg-12 ">
             <h2 class="title text-center">¿QUIÉNES SOMOS?</h2>
+            <div class="box-blue uppercase bold italic text-center title-upper">
+              <p>&quot;UNA EMPRESA CON MÁS DE 40 AÑOS DE EXPERIENCIA&quot;</p>
+            </div>
           </div>
-        </div>
-      </div>
-    </section>
-    <div class="box-blue uppercase bold italic text-center title-upper" style="height:70px;">
-      <p>&quot;UNA EMPRESA CON MÁS DE 40 AÑOS DE EXPERIENCIA&quot;</p>
-    </div>
-     <section id="about" style="padding-top: 0px;">
-      <div class="container">
-        <div class="row about-container">
           <div class="col-lg-6 content order-lg-1 order-2">
             <p>
               Somos una empresa familiar creada en el año 1.980, dedicada a la venta de herramientas en las provincias de Mendoza, San Luis, San Juan, La Rioja y Catamarca.
