--- a/www/src/Inamika/BackOfficeBundle/Resources/views/_partials/dataTableScripts.html.twig
+++ b/www/src/Inamika/BackOfficeBundle/Resources/views/_partials/dataTableScripts.html.twig
@@ -39,8 +39,8 @@ $.extend( true, $.fn.dataTable.defaults, {
         dataSrc: ''
     },
     buttons: [
-    'excel',
-    {# 'pdf' #}
+    {# 'excel',
+    'pdf' #}
     ],
 });
 $('#{{ pathBase }}_dataTable').on('click', 'button.btn-edit', function () {
