--- a/www/src/Inamika/FrontendBundle/Resources/views/_partials/selectCategory.html.twig
+++ b/www/src/Inamika/FrontendBundle/Resources/views/_partials/selectCategory.html.twig
@@ -12,6 +12,15 @@
 <br>
 <div class="card">
     <div class="card-body">
+        <h5 class="card-title">Lista preformateada</h5>
+        <hr>
+        <p>En este apartado contrarás todos los productos de mayor rotación y una rápida forma de agregarlos al carrito</p> 
+        <a role="button" class="btn btn-primary btn-block" href="{{ path('inamika_frontend_shop_preformatted')}}"><i class="fa fa-check"></i> Continuar</a>
+    </div>
+</div>
+<br>
+<div class="card">
+    <div class="card-body">
         <h5 class="card-title">Lista de precios</h5>
         <hr>
         <a role="button" class="btn btn-primary btn-block" href="{{ path('api_prices_download')}}"><i class="fa fa-download"></i> Descargar</a>
