--- a/www/src/Inamika/FrontendBundle/Resources/public/css/style.css
+++ b/www/src/Inamika/FrontendBundle/Resources/public/css/style.css
@@ -1459,3 +1459,21 @@ div.badge-cart {
         font-size: 1.5rem !important;
     }
 }
+
+.table-reduced td, .table-reduced th{
+    padding: 0.25rem;
+    white-space: nowrap;
+}
+
+#cartFloat{
+    transition-property: all;
+    transition-duration: 3s, 5s, 3s, 5s;
+}
+
+.totalFixed{
+    
+    position: fixed;
+    width: 300px;
+    right: 0;
+    z-index: 25;
+}
